# telegrapher-py

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: agent-behavior.md  core-beliefs.md  debugging.md  dev-environment.md  feature-proposals.md  functionality-audit.md  harness-guidelines.md  post-deploy-checklist.md  testing.md  workflows.md
docs/design-docs/: dd-001-backend-abstraction.md  index.md
docs/exec-plans/: tech-debt-tracker.md
docs/exec-plans/active/: v0.1-memory-wedge.md
docs/plans/: README.md  inherited-docs-cleanup.md  telegrapher-package-launch.md
docs/product-specs/: index.md  ps-001-memory-wedge.md
src/telegrapher/: __init__.py
src/telegrapher/cli/: __init__.py  app.py
src/telegrapher/core/: __init__.py  cache.py  config.py  metrics.py  telegrapher.py
src/telegrapher/core/backends/: __init__.py  base.py  factory.py  local.py
src/telegrapher/core/backends/runners/: __init__.py  mock.py
src/telegrapher/eval/: __init__.py  report.py  validate.py
src/telegrapher/integrations/: __init__.py
src/telegrapher/memory/: __init__.py  compactor.py  types.py
tests/: conftest.py  test_backends.py  test_cache.py  test_cli.py  test_core.py  test_eval.py  test_memory.py  test_metrics.py  test_smoke.py
